<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subscribed"
            android:icon="@drawable/ic_reddit"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_subreddit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_circle"
            android:title="@string/menu_slideshow" />


    </group>
</menu>