<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_subscribed">

    <fragment
        android:id="@+id/nav_subscribed"
        android:name="gr.sdim.andreddit.ui.subscribed.SubscriptionsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_subscribed" />

    <fragment
        android:id="@+id/nav_subreddit"
        android:name="gr.sdim.andreddit.ui.subreddit.SubredditFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_subreddit" />



    <fragment
        android:id="@+id/nav_about"
        android:name="gr.sdim.andreddit.ui.about.AboutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="gr.sdim.andreddit.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favorites_to_nav_subreddit"
            app:destination="@id/nav_subreddit" />
    </fragment>
</navigation>