<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subreddit.SubredditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/subreddit_contents"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/no_data_available_n_please_check_your_internet_connection"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/user_icon"
                    android:padding="8dp"
                    android:src="@drawable/ic_user_circle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <EditText
                android:id="@+id/text_insert_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/secondary_text_dark"
                android:gravity="start|top"
                android:imeOptions="actionDone"
                android:hint="@string/make_a_comment"
                android:inputType="textMultiLine"
                android:lines="4"
                android:padding="8dp"
                android:singleLine="false"
                android:autofillHints="" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_comments_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/comments"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/comment_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                 />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/share_reddit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />
</androidx.constraintlayout.widget.ConstraintLayout>